--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,6 @@
 
+/* Layout */ 
+
 #wrapper
 {
     background-color: #ffffff;
@@ -20,6 +22,10 @@
     background-color: #FFFFFF;
     border-radius: 8px;
     border-bottom: solid 2px #000000;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 0px;
+    
 }
 
 
@@ -73,6 +79,7 @@
     margin-top: 7px;
     margin-left: 6px;
     border-radius: 8px;
+    
 }
 
 
@@ -94,11 +101,13 @@ list-style: none;
 {
     background-color: #0095F4;
     width: auto;
-    height: 25px;
-    margin-top: 5px;
+    height: 30px;
+    
     border-radius: 8px;
     border-top: solid 2px #000000;
     text-align: center;
+    vertical-align: middle;
+    line-height: 0px;
     
 }
 
@@ -123,13 +132,31 @@ list-style: none;
     border-top: solid 2px #000000;
     text-align: center;
     border-radius: 8px;
-    margin-top: -3px;
+    margin-top: 1px;
 }
 
 
 
+/* Typografi */
 
 
+p 
+{ 
+    font-family: Verdana; font-size: 12px; color: #000000; 
+}
+
+h2
+{
+    font-family: Verdana; font-size: 18px; color: #000000; text-decoration: bold; text-decoration: underline;  
+    
+}
+
+
+
+a:link { text-decoration: underline; color: #000000; font-family: verdana; font-size: 12px;}
+a:visited { text-decoration: none; color: #000000; font-family: verdana; font-size: 12px; }
+a:active { text-decoration: none; color: #000000; font-family: verdana; font-size: 12px; }
+a:hover { text-decoration: none; color: #CCCCCC; font-family: verdana; font-size: 12px; }
 
 
 
