--- a/www/css/style.css
+++ b/www/css/style.css
@@ -49,7 +49,7 @@
     border-bottom: solid 2px #000000;
     text-align: center;
     border-radius: 8px;
-    margin-top: -19px;
+    margin-top: -15px;
 }
 
 
@@ -120,7 +120,7 @@ list-style: none;
     border-top: solid 2px #000000;
     text-align: center;
     border-radius: 8px;
-    margin-top: -12px;
+    margin-top: 0px;
 }
 
 
@@ -148,16 +148,49 @@ p
 h2
 {
     font-family: Verdana; font-size: 18px; color: #000000; text-decoration: bold; text-decoration: underline;  
-    
+}
+
+h3
+{
+   font-family: Verdana; font-size: 15px; color: #000000; text-decoration: bold; text-decoration: underline;   
 }
 
 
+ol
+{
+    font-family: Verdana; font-size: 12px; color: #000000;
+}
+
+ul
+{
+font-family: Verdana; font-size: 12px; color: #000000;    
+}
 
 a:link { text-decoration: underline; color: #000000; font-family: verdana; font-size: 12px;}
 a:visited { text-decoration: none; color: #000000; font-family: verdana; font-size: 12px; }
 a:active { text-decoration: none; color: #000000; font-family: verdana; font-size: 12px; }
 a:hover { text-decoration: none; color: #CCCCCC; font-family: verdana; font-size: 12px; }
 
+
+
+
+
+thead
+{
+    background-color: #0095F4;
+     color: #000000; font-family: verdana; font-size: 15px;
+}
+
+tfoot
+{
+    background-color: #0095F4;
+     color: #000000; font-family: verdana; font-size: 15px;
+}
+
+table {
+  border-collapse: collapse;
+  
+}
 
 
 
