--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,6 +1,12 @@
 
 /* Layout */ 
 
+body
+{
+    background: url(pics/backgroundimage2.jpeg) no-repeat;
+}
+
+
 #wrapper
 {
     background-color: #ffffff;
@@ -22,9 +28,9 @@
     background-color: #FFFFFF;
     border-radius: 8px;
     border-bottom: solid 2px #000000;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 0px;
+    margin-top: 0px;
+    
+    
     
 }
 
@@ -83,12 +89,16 @@
 }
 
 
-#menyli a:link { text-decoration: none; color: #000000; font-family: verdana; font-size: 15px;}
-#menyli a:visited { text-decoration: none; color: #000000; font-family: verdana; font-size: 15px; }
-#menyli a:active { text-decoration: none; color: #000000; font-family: verdana; font-size: 15px; }
-#menyli li a:hover { text-decoration: none; color: #FFFFFF; font-family: verdana; font-size: 15px; background: #0095F4; }
-#menyli a:active {text-decoration: none; color: #FFFFFF; font-family: verdana; font-size: 15px; background: #FFA800 }
+#menyli a:link { text-decoration: none; color: #000000; font-family: verdana; font-size: 16px;}
+#menyli a:visited { text-decoration: none; color: #000000; font-family: verdana; font-size: 16px; }
+#menyli a:active { text-decoration: none; color: #000000; font-family: verdana; font-size: 16px; }
+#menyli li a:hover { text-decoration: none; color: #FFFFFF; font-family: verdana; font-size: 16px; background: #0095F4; }
+ 
 
+.active
+{
+    text-decoration: none; color: #FFFFFF; font-family: verdana; font-size: 16px; background: #FFA800 
+}
 
 #menyli li {
 list-style: none;
@@ -102,12 +112,12 @@ list-style: none;
     background-color: #0095F4;
     width: auto;
     height: 30px;
-    
     border-radius: 8px;
     border-top: solid 2px #000000;
     text-align: center;
     vertical-align: middle;
     line-height: 0px;
+    margin-top: 0px;
     
 }
 
@@ -120,7 +130,7 @@ list-style: none;
     border-top: solid 2px #000000;
     text-align: center;
     border-radius: 8px;
-    margin-top: 0px;
+    margin-top: -8px;
 }
 
 
@@ -132,7 +142,7 @@ list-style: none;
     border-top: solid 2px #000000;
     text-align: center;
     border-radius: 8px;
-    margin-top: 1px;
+    margin-top: -6px;
 }
 
 
@@ -142,7 +152,8 @@ list-style: none;
 
 p 
 { 
-    font-family: Verdana; font-size: 12px; color: #000000; 
+    font-family: Verdana; font-size: 14px; color: #000000; 
+    white-space: pre-line;
 }
 
 h2
@@ -156,20 +167,35 @@ h3
 }
 
 
+h9
+{
+   font-family: Verdana; font-size: 35px; color: #000000; text-decoration: bold;  
+}
+
+h10
+{
+   font-family: Verdana; font-size: 15px; color: #5D5F60; text-decoration: bold;  
+
+    
+}
+
+
 ol
 {
-    font-family: Verdana; font-size: 12px; color: #000000;
+    font-family: Verdana; font-size: 14px; color: #000000;
+    
 }
 
 ul
 {
-font-family: Verdana; font-size: 12px; color: #000000;    
+font-family: Verdana; font-size: 14px; color: #000000;  
+
 }
 
-a:link { text-decoration: underline; color: #000000; font-family: verdana; font-size: 12px;}
-a:visited { text-decoration: none; color: #000000; font-family: verdana; font-size: 12px; }
-a:active { text-decoration: none; color: #000000; font-family: verdana; font-size: 12px; }
-a:hover { text-decoration: none; color: #CCCCCC; font-family: verdana; font-size: 12px; }
+a:link { text-decoration: underline; color: #000000; font-family: verdana; font-size: 14px;}
+a:visited { text-decoration: none; color: #000000; font-family: verdana; font-size: 14px; }
+a:active { text-decoration: none; color: #000000; font-family: verdana; font-size: 14px; }
+a:hover { text-decoration: none; color: #CCCCCC; font-family: verdana; font-size: 14px; }
 
 
 
