--- a/www/css/style.css
+++ b/www/css/style.css
@@ -95,11 +95,6 @@ body
 #menyli li a:hover { text-decoration: none; color: #FFFFFF; font-family: verdana; font-size: 16px; background: #0095F4; }
  
 
-.active
-{
-    text-decoration: none; color: #FFFFFF; font-family: verdana; font-size: 16px; background: #FFA800 
-}
-
 #menyli li {
 list-style: none;
 }
@@ -169,13 +164,14 @@ h3
 
 h9
 {
-   font-family: Verdana; font-size: 35px; color: #000000; text-decoration: bold;  
+   font-family: Verdana; font-size: 35px; color: #000000; text-decoration: bold;
+   text-align: center;
 }
 
 h10
 {
    font-family: Verdana; font-size: 15px; color: #5D5F60; text-decoration: bold;  
-
+text-align: center;
     
 }
 
@@ -219,8 +215,28 @@ table {
 }
 
 
+.active
+{
+    text-decoration: none; color: #FFFFFF; font-family: verdana; font-size: 16px; background: #FFA800 
+}
+
+.right
+{
+    float: right;
+    
+}
 
 
+.left
+{
+    float: left;
+    
+}
+
+.textcenter
+{
+    text-align: center;
+}
 
 
 
