--- a/www/css/style.css
+++ b/www/css/style.css
@@ -78,8 +78,9 @@ body
 
 #meny 
 {
+    /*background-image: url('pics/sprite.png') no-repeat;*/
     width: 190px;
-    height: 150px;
+    height: 182px;
     background-color: #FFFFFF;
     border: solid 2px #000000;
     float: left;
@@ -93,11 +94,19 @@ body
 #menyli a:link { text-decoration: none; color: #000000; font-family: verdana; font-size: 16px;}
 #menyli a:visited { text-decoration: none; color: #000000; font-family: verdana; font-size: 16px; }
 #menyli a:active { text-decoration: none; color: #000000; font-family: verdana; font-size: 16px; }
-#menyli li a:hover { text-decoration: none; color: #FFFFFF; font-family: verdana; font-size: 16px; background: #0095F4; }
+#menyli li a:hover { text-decoration: none; color: #CCCCCC; font-family: verdana; font-size: 16px; background: #0095F4; }
  
 
 #menyli li {
-list-style: none;
+    list-style: none;
+    margin: 8px;
+}
+#meny a{
+    background-image: url('pics/sprite.png');
+    background-repeat:no-repeat; 
+    padding-left: 28px;
+    padding-bottom: 5px;
+    
 }
 
 
@@ -126,7 +135,6 @@ list-style: none;
     border-top: solid 2px #000000;
     text-align: center;
     border-radius: 8px;
-    margin-top: -8px;
 }
 
 
@@ -236,4 +244,68 @@ table {
 
 
 
+#meny li a.index 
+{
+    background-position: 0 -49px;
 
+    
+}
+
+#meny li a:hover.index 
+{
+    background: url('pics/sprite.png') no-repeat 0 -1px;
+	width: 24px;
+	height: 22px
+    
+}
+
+
+#meny li a.laborationer
+{
+    background: url('pics/sprite.png') no-repeat 0 -145px;
+	width: 24px;
+	height: 22px;
+    
+}
+
+#meny li a:hover.laborationer 
+{
+    background: url('pics/sprite.png') no-repeat 0 -97px;
+	width: 24px;
+	height: 22px;
+    
+}
+
+
+#meny li a.presentation
+{
+    background: url(pics/sprite.png) no-repeat -1px -240px;
+	width: 22px;
+	height: 24px;
+    text-indent: 20px;   
+}
+
+#meny li a:hover.presentation 
+{
+    background: url('pics/sprite.png') no-repeat -1px -192px;
+	width: 22px;
+	height: 24px;
+    
+}
+
+
+#meny li a.kontakt
+{
+    background: url('pics/sprite.png') no-repeat 0 -336px;
+	width: 24px;
+	height: 24px;
+    
+}
+
+#meny li a:hover.kontakt 
+{
+    background: url('pics/sprite.png') no-repeat 0 -288px;
+	width: 24px;
+	height: 24px;
+    
+}
