--- a/www/css/style.css
+++ b/www/css/style.css
@@ -7,7 +7,7 @@ body
 }
 
 
-#wrapper
+section
 {
     background-color: #ffffff;
     width: 960px;
@@ -22,7 +22,7 @@ body
 
 
 
-#head
+header
 {
     width: 958px;
     height: 155px;
@@ -36,7 +36,7 @@ body
 }
 
 
-#head2
+header2
 {
     width: auto;
     height: 25px;
@@ -48,7 +48,7 @@ body
 }
 
 
-#head3
+header3
 {
     width: auto;
     height: 25px;
@@ -62,7 +62,7 @@ body
 
 
 
-#content
+main
 {
     height: 695px;
     background-color: #ffffff;
@@ -76,7 +76,7 @@ body
 
 
 
-#meny 
+nav 
 {
     /*background-image: url('pics/sprite.png') no-repeat;*/
     width: 190px;
@@ -91,19 +91,19 @@ body
 }
 
 
-#menyli a:link { text-decoration: none; color: #000000; font-family: verdana; font-size: 16px;}
-#menyli a:visited { text-decoration: none; color: #000000; font-family: verdana; font-size: 16px; }
-#menyli a:active { text-decoration: none; color: #000000; font-family: verdana; font-size: 16px; }
-#menyli li a:hover { text-decoration: none; color: #CCCCCC; font-family: verdana; font-size: 16px; background: #0095F4; }
+nav a:link { text-decoration: none; color: #000000; font-family: verdana; font-size: 16px;}
+nav a:visited { text-decoration: none; color: #000000; font-family: verdana; font-size: 16px; }
+nav a:active { text-decoration: none; color: #000000; font-family: verdana; font-size: 16px; }
+nav li a:hover { text-decoration: none; color: #CCCCCC; font-family: verdana; font-size: 16px; background: #0095F4; }
  
 
-#menyli li 
+nav li 
 {
     list-style: none;
     margin: 8px;
 }
 
-#meny a
+nav a
 {
     background-image: url('pics/sprite.png');
     background-repeat:no-repeat; 
@@ -114,7 +114,7 @@ body
 
 
 
-#footer
+footer
 {
     background-color: #0095F4;
     width: auto;
@@ -128,18 +128,20 @@ body
 }
 
 
-#footer2
+footer2
 {
-    width: auto;
-    height: 25px;
     background-color: #0095F4;
+    width: auto;
+    height: 30px;
+    border-radius: 8px;
     border-top: solid 2px #000000;
     text-align: center;
-    border-radius: 8px;
+    vertical-align: middle;
+    
 }
 
 
-#footer3
+footer3
 {
     width: auto;
     height: 25px;
@@ -148,6 +150,21 @@ body
     text-align: center;
     border-radius: 8px;
     margin-top: -157px;
+}
+
+
+quotes
+{
+    wid
+    font-family: verdana;
+    font-size: 12px;
+    color: #333
+    border: solid 1px #000;
+    display: block;
+    font-style: italic;
+    
+    
+    
 }
 
 
@@ -252,14 +269,14 @@ table {
 
 /* Sprites */
 
-#meny li a.index 
+nav li a.index 
 {
     background-position: 0 -49px;
 
     
 }
 
-#meny li a:hover.index 
+nav li a:hover.index 
 {
     background: url('pics/sprite.png') no-repeat 0 -1px;
 	width: 24px;
@@ -268,7 +285,7 @@ table {
 }
 
 
-#meny li a.laborationer
+nav li a.laborationer
 {
     background: url('pics/sprite.png') no-repeat 0 -145px;
 	width: 24px;
@@ -276,7 +293,7 @@ table {
     
 }
 
-#meny li a:hover.laborationer 
+nav li a:hover.laborationer 
 {
     background: url('pics/sprite.png') no-repeat 0 -97px;
 	width: 24px;
@@ -285,7 +302,7 @@ table {
 }
 
 
-#meny li a.presentation
+nav li a.presentation
 {
     background: url(pics/sprite.png) no-repeat -1px -240px;
 	width: 22px;
@@ -293,7 +310,7 @@ table {
     text-indent: 20px;   
 }
 
-#meny li a:hover.presentation 
+nav li a:hover.presentation 
 {
     background: url('pics/sprite.png') no-repeat -1px -192px;
 	width: 22px;
@@ -302,7 +319,7 @@ table {
 }
 
 
-#meny li a.kontakt
+nav li a.kontakt
 {
     background: url('pics/sprite.png') no-repeat 0 -336px;
 	width: 24px;
@@ -310,7 +327,7 @@ table {
     
 }
 
-#meny li a:hover.kontakt 
+nav li a:hover.kontakt 
 {
     background: url('pics/sprite.png') no-repeat 0 -288px;
 	width: 24px;
